# ifm

./: Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  config.status  configure  configure.ac
doc/: Makefile  Makefile.am  Makefile.in  conf.py  conf.py.in
doc/conf/: Makefile  Makefile.am  Makefile.in  constraints.txt  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
doc/examples/: Makefile  Makefile.am  Makefile.in
doc/html/: .buildinfo  changes.html  contents.html  editors.html  example.html  genindex.html  ifm2dev.html  ifm2tex.html  ifm2web.html  index.html  intro.html  language.html  license.html  links.html  maps.html  (+10 more)
etc/: Makefile.common  config.h  config.h.in  stamp-h1  vctag
lib/: Makefile  Makefile.in  helvetica.ifm  ifm-init.ifm  ifm-pro.ps  noshadow.ifm  puzzle.ifm  reckless.ifm  special.ifm  verbose.ifm
man/: Makefile  Makefile.am  Makefile.in  ifm.1
progs/: Makefile  Makefile.in  ifm2dev  ifm2dev.pl  ifm2tex  ifm2tex.pl  ifm2web  ifm2web.pl  scr2ifm  scr2ifm.pl  tkifm  tkifm.tcl
src/: Makefile  Makefile.am  Makefile.in  ifm  ifm-dot.c  ifm-dot.h  ifm-fig.c  ifm-fig.h  ifm-format.c  ifm-format.h  ifm-main.c  ifm-main.h  ifm-map.c  ifm-map.h  ifm-parse.c  ifm-parse.h  ifm-parse.y  ifm-path.c  ifm-path.h  ifm-ps.c  ifm-ps.h  ifm-raw.c  ifm-raw.h  ifm-rec.c  ifm-rec.h  ifm-scan.c  ifm-scan.l  ifm-task.c  ifm-task.h  ifm-text.c  ifm-text.h  ifm-tk.c  ifm-tk.h  ifm-util.c  ifm-util.h  ifm-vars.c  ifm-vars.h  ifm-yaml.c  ifm-yaml.h
tests/: Makefile  Makefile.in
win32/: Makefile  Makefile.in
(+103 files in other folders)
